[gd_scene load_steps=4 format=3 uid="uid://cgvv3xq604bq7"]

[ext_resource type="Script" path="res://Live/Speedrun/LiveSplit/Splits.gd" id="1_3asyh"]

[sub_resource type="LabelSettings" id="LabelSettings_p7oo4"]
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_wri2d"]
font_color = Color(0, 1, 0, 1)

[node name="Splits" type="PanelContainer"]
offset_right = 240.0
offset_bottom = 270.0
script = ExtResource("1_3asyh")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "DemonCrawl"
label_settings = SubResource("LabelSettings_p7oo4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SubTitleContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="CategoryLabel" type="Label" parent="VBoxContainer/SubTitleContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
text = "Casual Fresh File"

[node name="AttemptCounter" type="Label" parent="VBoxContainer/SubTitleContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "24"

[node name="SplitsScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="SplitsContainer" type="VBoxContainer" parent="VBoxContainer/SplitsScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TimerLabel" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
bbcode_enabled = true
text = "[right][font_size=48]0[/font_size][font_size=32].00[/font_size]"
fit_content = true

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Previous Segment"

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 10
text = "-24.19"
label_settings = SubResource("LabelSettings_wri2d")

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "Current Pace"

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 10
text = "12:53.02"

[node name="HBoxContainer5" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer5"]
layout_mode = 2
text = "Sum of Best Segments"

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 10
text = "11:51.89"

[node name="ReturnInstructions" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Press [Ctrl+R] to return"
horizontal_alignment = 1
